section03-network-ingress-helm/lab-3-1-ingress/k8s/blue-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-app
  namespace: lab3-1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blue-app
  template:
    metadata:
      labels:
        app: blue-app
    spec:
      containers:
        - name: nginx
          image: nginx:1.25-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
      volumes:
        - name: html
          configMap:
            name: blue-html
---
apiVersion: v1
kind: Service
metadata:
  name: blue-svc
  namespace: lab3-1
spec:
  selector:
    app: blue-app
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
