section03-network-ingress-helm/lab-3-1-ingress/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lab3-1-ingress
  namespace: lab3-1
  annotations:
    # Reescribe el path antes de enviarlo al backend:
    # /blue/pagina → /pagina (el backend recibe solo el sufijo)
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    # Sin campo "host:" → aplica a cualquier hostname, incluido localhost
    - http:
        paths:
          - path: /blue(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: blue-svc
                port:
                  number: 80
          - path: /green(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: green-svc
                port:
                  number: 80
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-svc
                port:
                  number: 3000
